<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripCostResultFragment">

    <TextView
        android:id="@+id/tripCostResultHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/trip_cost_result_header"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tripCostResultContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripCostResultHeader">

        <TextView
            android:id="@+id/averageConsumptionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Consumo: 10 km/L" />

        <TextView
            android:id="@+id/fuelPriceResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_price_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/averageConsumptionResult"
            tools:text="Preço do Combustível: R$ 6,50" />

        <TextView
            android:id="@+id/estimatedCostResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fuelPriceResult"
            tools:text="Custo Total Estimado: R$ 325,00" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/new_trip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripCostResultContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>