<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistanceInputFragment">

    <TextView
        android:id="@+id/distanceInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/distance_input_instruction"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/distanceInput"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="46dp"
        android:hint="@string/distance_input_hint"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distanceInstruction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/action_next_screen"
        app:layout_constraintEnd_toEndOf="@+id/distanceInput"
        app:layout_constraintStart_toStartOf="@+id/distanceInput"
        app:layout_constraintTop_toBottomOf="@+id/distanceInput" />
</androidx.constraintlayout.widget.ConstraintLayout>